--- a/src/app/currency-converter/currency-converter.component.html
+++ b/src/app/currency-converter/currency-converter.component.html
@@ -65,7 +65,7 @@
 
   <!-- post tax -->
   <div class="line" mat-card-title>
-    <span>Post tax</span>
+    <span>Postage</span>
     <span class="fill-remaining-space"></span>
     <span>{{postTax | number:'0.2-2'}}</span>
   </div>
@@ -77,7 +77,7 @@
 
   <!-- customs tax -->
   <div class="line" mat-card-title>
-    <span>Customs tax</span>
+    <span>VAT</span>
     <span class="fill-remaining-space"></span>
     <span>{{customsTax | number:'0.2-2'}}</span>
   </div>
